<resources>
    <string name="app_name">GurpsTable</string>

    <string name="magic_disruption_level">Úroveň narušení</string>
    <string name="magic_disruption_button_plus">+</string>
    <string name="magic_disruption_button_minus">-</string>
    <string name="magic_disruption_target_number">Cílové číslo</string>
    <string name="magic_disruption_thaumatology">Mág</string>
    <string name="magic_disruption_ritual">Ritualista</string>
    <string name="magic_disruption_button_spell">Kouzlo</string>
    <string name="magic_disruption_button_total">Totální úspěch</string>
    <string name="magic_disruption_button_fatal">Fatální neúspěch</string>
    <string name="magic_disruption_button_failed">Neúspěch</string>
    <string name="magic_disruption_button_success">Úspěch</string>
    <string name="magic_disruption_spell_energy">Energie kouzla</string>
    <string name="magic_disruption_spell_info">Zadejte výsledek sesílání kouzla, v případě úspěšného seslání jeho energii (při neúspěchu se počítá s energií rovnou 1)</string>
    <string name="magic_disruption_fatal_info">Fatální neúspěch při sesílání kouzla vždy vede k průchodu astrální bránou. Zadejte energii sesílaného kouzla.</string>
    <string name="magic_disruption_button_ok">Ok</string>
    <string name="magic_disruption_roll">Výsledek hodu na průchod</string>
    <string name="magic_disruption_effect">Výsledek hodu na efekt</string>
    <string name="magic_disruption_column">Sloupec efektu</string>
    <string name="magic_disruption_button_close">Zavřít</string>
    <string name="magic_disruption_effect_info">Došlo k průchodu astrální branou!</string>
    <string name="magic_disruption_button_thaumatology">Mág</string>
    <string name="magic_disruption_button_ritual">Ritualista</string>

    <string name="magic_passage_1_3">Dar - světec</string>
    <string name="magic_passage_2_3">Dar - nižší božský pomocník</string>
    <string name="magic_passage_3_3">Dar - nižší božstvo</string>
    <string name="magic_passage_1_4">Magický krystal (energie 1k6+4)</string>
    <string name="magic_passage_2_4">Magický krystal (energie 2k6 + 8)</string>
    <string name="magic_passage_3_4">Magický krystal (energie 3k6 + 12)</string>
    <string name="magic_passage_1_5">Duch - běžný člověk - neutrální</string>
    <string name="magic_passage_2_5">Duch - VIP - neutrální</string>
    <string name="magic_passage_3_5">Duch - čaroděj - neutrální</string>
    <string name="magic_passage_1_6">Malý elementál - neutrální</string>
    <string name="magic_passage_2_6">Střední elementál - neutrální</string>
    <string name="magic_passage_3_6">Velký elementál - neutrální</string>
    <string name="magic_passage_1_7"></string>
    <string name="magic_passage_2_7"></string>
    <string name="magic_passage_3_7"></string>
    <string name="magic_passage_1_8">Magický výboj - 1k6+3</string>
    <string name="magic_passage_2_8">Magický výboj - 3k6</string>
    <string name="magic_passage_3_8">Magický výboj - 3k6 - všichni v okolí</string>
    <string name="magic_passage_1_9">Duch - běžný člověk - nepřátelský</string>
    <string name="magic_passage_2_9">Duch - VIP - nepřátelský</string>
    <string name="magic_passage_3_9">Duch - čaroděj - nepřátelský</string>
    <string name="magic_passage_1_10">Démon - pokušitel - čaroděj</string>
    <string name="magic_passage_2_10">Démon - nemoc - čaroděj</string>
    <string name="magic_passage_3_10">Démon - posednutí - čaroděj</string>
    <string name="magic_passage_1_11">Démon - pokušitel - kdokoliv v okolí</string>
    <string name="magic_passage_2_11">Démon - nemoc - kdokoliv v okolí</string>
    <string name="magic_passage_3_11">Démon - posednutí - kdokoliv v okolí</string>
    <string name="magic_passage_1_12">Malý elementál - nepřátelský</string>
    <string name="magic_passage_2_12">Střední elementál - nepřátelský</string>
    <string name="magic_passage_3_12">Velký elementál - nepřátelský</string>
    <string name="magic_passage_1_13">Poltergeist</string>
    <string name="magic_passage_2_13">Neviditelný démon - neutrální</string>
    <string name="magic_passage_3_13">Neviditelný démon - nepřátelský</string>
    <string name="magic_passage_1_14">Démon lovec</string>
    <string name="magic_passage_2_14">Démon unašeč</string>
    <string name="magic_passage_3_14">Démon rozsekávač</string>
    <string name="magic_passage_1_15">Magická přeháňka</string>
    <string name="magic_passage_2_15">Magický déšť</string>
    <string name="magic_passage_3_15">Magická bouře</string>
    <string name="magic_passage_1_16">Mladý tvor z podzemního rozměru</string>
    <string name="magic_passage_2_16">Tvor z podzemního rozměru</string>
    <string name="magic_passage_3_16">Prastarý tvor z podzemního rozměru</string>
    <string name="magic_passage_1_17">Krátkodobé otevření brány (1k6 kol)</string>
    <string name="magic_passage_2_17">Otevření dočasné brány (1k6 hodin)</string>
    <string name="magic_passage_3_17">Otevření trvalé brány</string>
    <string name="magic_passage_1_18">Omezená magická katastrofa (10-15 metrů)</string>
    <string name="magic_passage_2_18">Lokální magická katastrofa (100-500m)</string>
    <string name="magic_passage_3_18">Rozsáhlá magická katastrofa (10-50mil)</string>
</resources>
