<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_primary"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/magic_disruption_spell_info"
            />
        <Button
            android:id="@+id/button_failed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/magic_disruption_button_failed"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <Button
                android:id="@+id/button_success"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/magic_disruption_button_success"
                />
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/magic_disruption_spell_energy"
                android:gravity="center_vertical">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/text_edit_energy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>